# AI-Coding-Agent-Orchestrator

./: .env.example  .gitignore  Dockerfile  README.md  STRUCTURE.md  docker-compose.dev.yml  docker-compose.yml  interaction.md  main.py  openapi.json  pyproject.toml
.specify/memory/: constitution.md
app/application/use_cases/: execute_task.py  handle_reply.py
app/core/: config.py  logger.py
app/domain/: entities.py
app/domain/interfaces/: __init__.py
app/infrastructure/db/: __init__.py  database.py  repository.py
app/infrastructure/opencode/: __init__.py  client.py  manager.py
app/infrastructure/telegram/: __init__.py  notifier.py
app/infrastructure/vcs/: __init__.py  git_cli.py  github_api.py
app/presentation/webhooks/: router.py
app/presentation/workers/: broker.py
development-docs/: DEPLOYMENT.md  E2E_TESTING_GUIDE.md  first_plan.md
scripts/: run-tests.bat  run-tests.sh
tests/: conftest.py
tests/e2e/: __init__.py  test_failure_modes.py  test_flow.py  test_integration.py  test_opencode_real.py
